# uid11

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  SPECIFICATION.md  uid11.h  uuid11.h  xid.h
cpp/: CMakeLists.txt  uid11.h
cpp/examples/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.cpp
python/: uid11.py
python/examples/: main.py
ts/: uid11.ts
ts/examples/: index.ts
